--- a/MyLab/pro/xService/xService.vcxproj
+++ b/MyLab/pro/xService/xService.vcxproj
@@ -39,9 +39,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>./code/include;./;$(IncludePath)</IncludePath>
+    <IncludePath>./code\include;./;$(IncludePath)</IncludePath>
     <OutDir>.\..\..\bin\Debug</OutDir>
-    <IntDir>.\..\..\tmp\$(ProjectName)\Debug</IntDir>
+    <IntDir>.\..\..\bld\tmp\$(ProjectName)\Debug</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
