--- a/MyLab/pro/xService/xService.vcxproj.filters
+++ b/MyLab/pro/xService/xService.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="code\include\x_util.h">
       <Filter>code\include</Filter>
     </ClInclude>
+    <ClInclude Include="code\x_service_door_net.hpp">
+      <Filter>code</Filter>
+    </ClInclude>
+    <ClInclude Include="code\include\x_net.h">
+      <Filter>code\include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +99,9 @@
       <Filter>code\impl</Filter>
     </ClCompile>
     <ClCompile Include="code\x_service_boost.cpp">
+      <Filter>code\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="code\x_service_net.cpp">
       <Filter>code\impl</Filter>
     </ClCompile>
   </ItemGroup>
