--- a/MyLab/pro/xService/xService.vcxproj.filters
+++ b/MyLab/pro/xService/xService.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClInclude Include="code\include\x_all.h">
       <Filter>code\include</Filter>
     </ClInclude>
+    <ClInclude Include="code\include\x_kbe.h">
+      <Filter>code\include</Filter>
+    </ClInclude>
+    <ClInclude Include="code\x_service_door_kbe.hpp">
+      <Filter>code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -111,6 +117,9 @@
       <Filter>code\impl</Filter>
     </ClCompile>
     <ClCompile Include="code\x_service_net_kbe.cpp">
+      <Filter>code\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="code\x_service_kbe.cpp">
       <Filter>code\impl</Filter>
     </ClCompile>
   </ItemGroup>
