--- a/MyLab/pro/xService/xService.vcxproj
+++ b/MyLab/pro/xService/xService.vcxproj
@@ -39,10 +39,10 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\boost_1_57_0;./code\include;./;$(IncludePath)</IncludePath>
+    <IncludePath>../../dep\lib;D:\boost_1_57_0;./code\include;./;$(IncludePath)</IncludePath>
     <OutDir>.\..\..\bin\Debug</OutDir>
     <IntDir>.\..\..\bld\tmp\$(ProjectName)\Debug</IntDir>
-    <LibraryPath>D:\boost_1_57_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>../../dep\libs;D:\boost_1_57_0\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -53,10 +53,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;XSERVICE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -83,6 +86,7 @@
     <ClInclude Include="code\include\x_boost.h" />
     <ClInclude Include="code\include\x_container.h" />
     <ClInclude Include="code\include\x_dummy.h" />
+    <ClInclude Include="code\include\x_kbe.h" />
     <ClInclude Include="code\include\x_net.h" />
     <ClInclude Include="code\include\x_thread.h" />
     <ClInclude Include="code\include\x_util.h" />
@@ -90,6 +94,7 @@
     <ClInclude Include="code\x_service_door_boost.hpp" />
     <ClInclude Include="code\x_service_door_container.hpp" />
     <ClInclude Include="code\x_service_door_dummy.hpp" />
+    <ClInclude Include="code\x_service_door_kbe.hpp" />
     <ClInclude Include="code\x_service_door_net.hpp" />
     <ClInclude Include="code\x_service_door_thread.hpp" />
     <ClInclude Include="code\x_service_door_util.hpp" />
@@ -101,6 +106,7 @@
     <ClCompile Include="code\x_service_boost.cpp" />
     <ClCompile Include="code\x_service_container.cpp" />
     <ClCompile Include="code\x_service_dummy.cpp" />
+    <ClCompile Include="code\x_service_kbe.cpp" />
     <ClCompile Include="code\x_service_net.cpp" />
     <ClCompile Include="code\x_service_net_boost.cpp" />
     <ClCompile Include="code\x_service_net_kbe.cpp" />
