--- a/MyLab/pro/xTest/xTest.vcxproj.filters
+++ b/MyLab/pro/xTest/xTest.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="test13_design.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test14_async.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
